--- a/app/src/main/res/layout/clipboard_payment_code.xml
+++ b/app/src/main/res/layout/clipboard_payment_code.xml
@@ -38,14 +38,15 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:id="@+id/scanPaymentCode"
+            android:id="@+id/scanPaymentCodeGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintEnd_toStartOf="@id/openAddressBook"
+            app:layout_constraintEnd_toStartOf="@id/openAddressBookGroup"
             app:layout_constraintStart_toStartOf="parent">
 
             <tech.nextcash.nextcashwallet.ImageButton
+                android:id="@+id/scanPaymentCode"
                 style="@style/SmallButton"
                 android:layout_width="@dimen/image_button_size"
                 android:layout_height="@dimen/image_button_size"
@@ -62,14 +63,15 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/openAddressBook"
+            android:id="@+id/openAddressBookGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintStart_toEndOf="@id/scanPaymentCode"
+            app:layout_constraintStart_toEndOf="@id/scanPaymentCodeGroup"
             app:layout_constraintEnd_toEndOf="parent">
 
             <tech.nextcash.nextcashwallet.ImageButton
+                android:id="@+id/openAddressBook"
                 style="@style/SmallButton"
                 android:layout_width="@dimen/image_button_size"
                 android:layout_height="@dimen/image_button_size"
