--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:animateLayoutChanges="true">
             <LinearLayout
                 android:id="@+id/main"
                 android:layout_width="match_parent"
@@ -44,12 +45,14 @@
                     android:id="@+id/header"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"/>
+                    android:orientation="vertical"
+                    android:animateLayoutChanges="true"/>
                 <LinearLayout
                     android:id="@+id/wallets"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"/>
+                    android:orientation="vertical"
+                    android:animateLayoutChanges="true"/>
                 <LinearLayout
                     android:id="@+id/controlsPadding"
                     android:layout_width="wrap_content"
@@ -60,7 +63,10 @@
                 android:id="@+id/dialog"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"/>
+                android:orientation="vertical"
+                android:padding="10dp"
+                android:layout_marginBottom="20dp"
+                android:animateLayoutChanges="true"/>
         </LinearLayout>
     </ScrollView>
 
@@ -69,8 +75,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:padding="20dp"
         android:layout_below="@id/toolbar"
-        android:layout_above="@id/statusBar">
+        android:layout_above="@id/statusBar"
+        android:animateLayoutChanges="true">
 
     </LinearLayout>
 
