--- a/app/src/main/res/layout/address_book.xml
+++ b/app/src/main/res/layout/address_book.xml
@@ -4,8 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:padding="20dp">
+    android:gravity="center_horizontal">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -20,7 +19,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/HeadingText"
-            android:textAlignment="center"
             android:text="@string/address_book"/>
     </LinearLayout>
 
@@ -30,9 +28,8 @@
         android:text="@string/address_book_description"/>
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:layout_marginTop="5dp"
         android:textStyle="bold"
         android:text="@string/swipe_to_delete"/>
