--- a/app/src/main/res/layout/instructions.xml
+++ b/app/src/main/res/layout/instructions.xml
@@ -4,8 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:padding="20dp">
+    android:gravity="center_horizontal">
 
     <TextView
         android:layout_width="match_parent"
