--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -3,9 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="10dp"
-    android:layout_marginBottom="20dp">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/exchangeCurrencyTitle"
@@ -224,31 +222,5 @@
         android:layout_marginStart="20dp"
         style="@style/Button"
         android:text="@string/reset_peers"/>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dip"
-        android:layout_marginTop="20dp"
-        android:background="#ddd" />
-
-    <TextView
-        android:id="@+id/editWalletsTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_edit_black_36dp"
-        android:drawablePadding="5dp"
-        android:text="@string/edit_wallets"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="20dp"
-        style="@style/HeadingText"/>
-
-    <LinearLayout
-        android:id="@+id/walletsSettings"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </LinearLayout>
 
 </LinearLayout>
