Update dialog padding.

--- a/app/src/main/res/layout/view_seed.xml
+++ b/app/src/main/res/layout/view_seed.xml
@@ -8,7 +8,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:text="@string/wallet_seed"
         android:textAlignment="center"
         style="@style/HeadingText"/>
@@ -87,7 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="m/44'/0'/0'"/>
+        style="@style/SubHeadingText"/>
 
     <TextView
         android:layout_width="match_parent"
