--- a/app/src/main/res/layout/edit_wallet.xml
+++ b/app/src/main/res/layout/edit_wallet.xml
@@ -9,8 +9,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp">
+        android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="wrap_content"
