--- a/app/src/main/res/layout/transaction.xml
+++ b/app/src/main/res/layout/transaction.xml
@@ -73,7 +73,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
-                android:layout_toStartOf="@id/modifyReceiveLabel"
+                android:layout_toStartOf="@id/modifyTransactionComment"
                 android:layout_centerVertical="true"
                 android:textStyle="bold"/>
 
