Add gain/loss report.

--- a/app/src/main/res/layout-w360dp/wallet_settings.xml
+++ b/app/src/main/res/layout-w360dp/wallet_settings.xml
@@ -79,6 +79,11 @@
         android:background="#ddd" />
 
     <tech.nextcash.nextcashwallet.TextButton
+        android:id="@+id/gainLossReport"
+        style="@style/Button"
+        android:text="@string/gain_loss"/>
+
+    <tech.nextcash.nextcashwallet.TextButton
         android:id="@+id/backupWallet"
         style="@style/Button"
         android:text="@string/backup_wallet"/>
