--- a/app/src/main/res/layout/wallet_item.xml
+++ b/app/src/main/res/layout/wallet_item.xml
@@ -108,15 +108,15 @@
             android:gravity="end">
 
             <ImageView
-                android:id="@+id/editWallet"
+                android:id="@+id/walletSettings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true"
-                android:src="@drawable/ic_edit_black_36dp"
+                android:src="@drawable/baseline_build_black_36dp"
                 android:padding="5dp"
                 android:layout_marginEnd="5dp"
-                android:contentDescription="@string/title_edit_wallet"
+                android:contentDescription="@string/wallet_settings"
                 android:onClick="onClick"/>
 
             <ImageView
