--- a/app/src/main/res/layout/wallet_settings.xml
+++ b/app/src/main/res/layout/wallet_settings.xml
@@ -3,8 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -76,6 +75,11 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:background="#ddd" />
+
+    <tech.nextcash.nextcashwallet.TextButton
+        android:id="@+id/gainLossReport"
+        style="@style/Button"
+        android:text="@string/gain_loss"/>
 
     <tech.nextcash.nextcashwallet.TextButton
         android:id="@+id/backupWallet"
