--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,4 +30,5 @@
     <color name="dialogBackground">#9000</color>
     <color name="disabled">#f999</color>
     <color name="enabled">#f000</color>
+    <color name="colorTotals">#f9ce</color>
 </resources>
